Matchmaking, aunque probado lo justo

--- a/public/paths/webhooks/move.yaml
+++ b/public/paths/webhooks/move.yaml
@@ -80,6 +80,16 @@ post:
                 description: |
                   Winner of the game 
                   *(only if the game ended with checkmate)*.
+              eloDiff:
+                type: number
+                description: |
+                  Rating gain for the player listening to this socket
+                  *(only in competitive games)*.
+              newElo: 
+                type: number
+                description: |
+                  New elo score of the player listening to this socket
+                  *(only in competitive games)*.
           examples:
             checkmate:
               value:
@@ -88,6 +98,18 @@ post:
             draw:
               value:
                 endState: "DRAW"
+            competitive victory:
+              value:
+                endState: "CHECKMATE"
+                winner: "LIGHT"
+                eloDiff: 15
+                newElo: 843
+            competitive defeat:
+              value:
+                endState: "CHECKMATE"
+                winner: "DARK"
+                eloDiff: -13
+                newElo: 726
     '400':
       description: event(error)
         Something went wrong.
