--- a/public/paths/webhooks/move.yaml
+++ b/public/paths/webhooks/move.yaml
@@ -117,13 +117,17 @@ post:
         text/plain:
           schema:
             description: Details of what caused the error.
-            type: string
-          examples:
-            not currently playing:
-              value: This socket is not playing any game
-            not a player of this game:
-              value: You are not a player of this game
-            illegal move:
-              value: Illegal move
-            not your turn:
-              value: It is not your turn
+            type: object
+            properties:
+              code:
+                type: integer
+                description: |
+                  Error code with a meaning similar to HTTP status errors.
+              error:
+                type: string
+                description: |
+                  Error type.
+              message:
+                type: string
+                description: |
+                  Description of what caused the error.
