--- a/public/paths/webhooks/surrender.yaml
+++ b/public/paths/webhooks/surrender.yaml
@@ -48,9 +48,17 @@ get:
         text/plain:
           schema:
             description: Details of what caused the error.
-            type: string
-          examples:
-            not currently playing:
-              value: This socket is not playing any game
-            not a player of this game:
-              value: You are not a player of this game
+            type: object
+            properties:
+              code:
+                type: integer
+                description: |
+                  Error code with a meaning similar to HTTP status errors.
+              error:
+                type: string
+                description: |
+                  Error type.
+              message:
+                type: string
+                description: |
+                  Description of what caused the error.
