--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,6 +21,18 @@ server {
     return 301 https://docs.gracehopper.xyz;
   }
 
+  location /assets {
+    proxy_pass http://expresshttp;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Origin $http_origin; 
+    
+    # Habilitar compresión para las imágenes
+    gzip on;
+    gzip_types image/webp;
+  }
+
   # Manejar todas las demás solicitudes
   location /v1 {
     proxy_pass http://expresshttp;
@@ -42,8 +54,10 @@ server {
   proxy_set_header X-Real-IP $remote_addr;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
+  proxy_http_version 1.1;
   proxy_set_header Upgrade $http_upgrade;
-  proxy_set_header Connection "upgrade";
+  proxy_set_header Connection "Upgrade";
+  proxy_set_header Host $host;
 
   location / {
     proxy_pass http://expressws;
