--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/express-slow-down": "^1.3.2",
     "@types/http-errors": "^2.0.1",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/lodash": "^4.14.194",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.14.6",
     "@types/passport": "^1.0.11",
