--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,12 @@
 # Configuración general de NGINX
 upstream expresshttp {
-  server express:4000;
-  # server reign-chess.duckdns.org:4000;
+  # server express:4000;
+  server reign-chess.duckdns.org:4000;
 }
 
 upstream expressws {
-  server express:4001;
-  # server reign-chess.duckdns.org:4001;
+  # server express:4001;
+  server reign-chess.duckdns.org:4001;
 }
 
 # Bloque de servidor para redirigir todas las solicitudes HTTP a HTTPS
