tiempo en torneos

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cookie-session": "^2.0.0",
     "cors": "2.8.5",
     "crypto": "^1.0.1",
+    "date-fns": "^2.30.0",
     "dayjs": "1.11.7",
     "debug": "2.6.9",
     "dotenv": "16.0.3",
