--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -29,6 +29,8 @@ jobs:
         node-version: 16
     - name: Install Dependencies
       run: npm ci
+    - name: Install stockfish
+      run: sudo apt-get install -y stockfish
 
   lint:
     name: lint 🪅
