--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -29,8 +29,6 @@ jobs:
         node-version: 16
     - name: Install Dependencies
       run: npm ci
-    - name: Install stockfish
-      run: sudo apt-get install -y stockfish
 
   lint:
     name: lint 🪅
@@ -62,7 +60,7 @@ jobs:
         cache: npm
         node-version: 16
     - name: Install Dependencies
-      run: npm ci
+      run: npm ci && sudo apt-get install -y stockfish
     - name: Certificates
       env:
         CERT: ${{ secrets.CERT }}
