--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -30,8 +30,6 @@ jobs:
         node-version: 16
     - name: Install Dependencies
       run: npm ci
-    - name: Install Stockfish
-      run: sudo apt-get install -y stockfish
 
   lint:
     name: lint 🪅
@@ -63,7 +61,7 @@ jobs:
         cache: npm
         node-version: 16
     - name: Install Dependencies
-      run: npm ci
+      run: npm ci && sudo apt-get install -y stockfish
     - name: Certificates
       env:
         CERT: ${{ secrets.CERT }}
