--- a/public/paths/games/getAllGames.yaml
+++ b/public/paths/games/getAllGames.yaml
@@ -14,12 +14,26 @@ get:
       name: page
       schema:
         type: integer
+        default: 1
       description: Page to be consulted.
     - in: query
       name: limit
       schema:
         type: integer
+        default: 30
       description: Max number of results on one page.
+    - in: query
+      name: sort
+      schema:
+        type: integer
+        example: -createdAt
+      description: Sort to be applied to the query.
+    - in: query
+      name: filter
+      schema:
+        type: integer
+        example: '{"$or":[{"darkId":"{{user_id}}"},{"lightId":"{{user_id}}"}]}'
+      description: Filter to be applied to the query.
   responses:
     200:
       description: Successful
