--- a/public/paths/tournaments/allTournaments.yaml
+++ b/public/paths/tournaments/allTournaments.yaml
@@ -92,6 +92,18 @@ get:
       schema:
         type: integer
       description: Max number of results on one page.
+    - in: query
+      name: sort
+      schema:
+        type: integer
+        example: -startTime
+      description: Sort to be applied to the query.
+    - in: query
+      name: filter
+      schema:
+        type: integer
+        example: '{"startTime":{"$gt":"2023-05-11T18:54:13.489Z"}}'
+      description: Filter to be applied to the query.
   responses:
     200:
       description: Successful
