--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -61,7 +61,7 @@ jobs:
         cache: npm
         node-version: 16
     - name: Install Dependencies
-      run: npm ci && sudo apt-get install -y stockfish
+      run: npm ci
     - name: Certificates
       env:
         CERT: ${{ secrets.CERT }}
