--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,11 +11,27 @@ upstream expressws {
 
 # Bloque de servidor para redirigir todas las solicitudes HTTP a HTTPS
 server {
+    listen 80;
+    server_name api.gracehopper.xyz;
+    
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
   listen 443 ssl;
   server_name api.gracehopper.xyz;
 
-  ssl_certificate /etc/nginx/fullchain.pem;
-  ssl_certificate_key /etc/nginx/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/api.gracehopper.xyz/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/api.gracehopper.xyz/privkey.pem;
+  
+  include     /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
   location / {
     return 301 https://docs.gracehopper.xyz;
