--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -19,63 +19,63 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  install:
-    name: install 📦
-    runs-on: ubuntu-22.04
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-    - uses: actions/setup-node@v3
-      with:
-        cache: npm
-        node-version: 16
-    - name: Install Dependencies
-      run: npm ci
+  # install:
+  #   name: install 📦
+  #   runs-on: ubuntu-22.04
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #     with:
+  #       fetch-depth: 0
+  #   - uses: actions/setup-node@v3
+  #     with:
+  #       cache: npm
+  #       node-version: 16
+  #   - name: Install Dependencies
+  #     run: npm ci
 
-  lint:
-    name: lint 🪅
-    needs: install
-    runs-on: ubuntu-22.04
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-    - uses: actions/setup-node@v3
-      with:
-        cache: npm
-        node-version: 16
-    - name: Install Dependencies
-      run: npm ci
-    - name: Lint
-      run: npm run lint
+  # lint:
+  #   name: lint 🪅
+  #   needs: install
+  #   runs-on: ubuntu-22.04
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #     with:
+  #       fetch-depth: 0
+  #   - uses: actions/setup-node@v3
+  #     with:
+  #       cache: npm
+  #       node-version: 16
+  #   - name: Install Dependencies
+  #     run: npm ci
+  #   - name: Lint
+  #     run: npm run lint
 
-  test:
-    name: test 🧪
-    needs: [install, lint]
-    runs-on: ubuntu-22.04
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-    - uses: actions/setup-node@v3
-      with:
-        cache: npm
-        node-version: 16
-    - name: Install Dependencies
-      run: npm ci
-    - name: Certificates
-      env:
-        CERT: ${{ secrets.CERT }}
-        KEY: ${{ secrets.KEY }}
-      run: |
-        mkdir -p nginx/api.gracehopper.xyz && echo "$CERT" | base64 -d > nginx/api.gracehopper.xyz/cert.pem
-        mkdir -p nginx/api.gracehopper.xyz && echo "$KEY" | base64 -d > nginx/api.gracehopper.xyz/privkey.pem
-    - name: Test
-      env:
-        NODE_ENV: test
-        NO_AI: true
-      run: npm run test
+  # test:
+  #   name: test 🧪
+  #   needs: [install, lint]
+  #   runs-on: ubuntu-22.04
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #     with:
+  #       fetch-depth: 0
+  #   - uses: actions/setup-node@v3
+  #     with:
+  #       cache: npm
+  #       node-version: 16
+  #   - name: Install Dependencies
+  #     run: npm ci
+  #   - name: Certificates
+  #     env:
+  #       CERT: ${{ secrets.CERT }}
+  #       KEY: ${{ secrets.KEY }}
+  #     run: |
+  #       mkdir -p nginx/api.gracehopper.xyz && echo "$CERT" | base64 -d > nginx/api.gracehopper.xyz/cert.pem
+  #       mkdir -p nginx/api.gracehopper.xyz && echo "$KEY" | base64 -d > nginx/api.gracehopper.xyz/privkey.pem
+  #   - name: Test
+  #     env:
+  #       NODE_ENV: test
+  #       NO_AI: true
+  #     run: npm run test
 
   deploy:
     name: deploy 🧪
@@ -131,6 +131,10 @@ jobs:
       - name: Login to DockerHub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Build and push
         uses: docker/build-push-action@v4
