--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -79,7 +79,7 @@ jobs:
 
   deploy:
     name: deploy 🧪
-    needs: [test]
+    # needs: [test]
     runs-on: ubuntu-22.04
     # permissions:
     #   contents: read
