--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -19,19 +19,26 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # install:
-  #   name: install 📦
-  #   runs-on: ubuntu-22.04
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #     with:
-  #       fetch-depth: 0
-  #   - uses: actions/setup-node@v3
-  #     with:
-  #       cache: npm
-  #       node-version: 16
-  #   - name: Install Dependencies
-  #     run: npm ci
+  install:
+    name: install 📦
+    runs-on: ubuntu-22.04
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - uses: actions/setup-node@v3
+      with:
+        cache: npm
+        node-version: 16
+    - name: Install Dependencies
+      run: npm ci
+    - name: Generate Build
+      run: npm run tsc
+    - name: Publish Build Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: build-artifact
+        path: /
 
   # lint:
   #   name: lint 🪅
@@ -80,39 +87,8 @@ jobs:
   deploy:
     name: deploy 🧪
     # needs: [test]
+    needs: [install]
     runs-on: ubuntu-22.04
-    # permissions:
-    #   contents: read
-    #   packages: write
-
-    # steps:
-    #   - name: Checkout repository
-    #     uses: actions/checkout@v3
-
-    #   - name: Log in to the Container registry
-    #     uses: docker/login-action@v2
-    #     with:
-    #       registry: ${{ env.REGISTRY }}
-    #       username: ${{ github.actor }}
-    #       password: ${{ secrets.GHCR_TOKEN }}
-
-    #   - name: Extract metadata (tags, labels) for Docker
-    #     id: meta
-    #     uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-    #     with:
-    #       images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-    #       tags: |
-    #         type=ref,event=branch
-    #         type=sha
-
-    #   - name: Build and push Docker image
-    #     uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-    #     with:
-    #       context: .
-    #       push: true
-    #       tags: ${{ steps.meta.outputs.tags }}
-    #       labels: ${{ steps.meta.outputs.labels }}
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -123,6 +99,11 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Download Build Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: build-artifact
 
       - name: Generate Docker Metadata and Push Tags to GitHub
         id: meta
