--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -38,7 +38,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: build-artifact
-        path: /
+        path: .
 
   # lint:
   #   name: lint 🪅
