--- a/k3s/deployment.yaml
+++ b/k3s/deployment.yaml
@@ -11,7 +11,30 @@ spec:
     spec:
       containers:
       - name: chess-backend
-        image: localhost:5000/chess-backend:latest
-        imagePullPolicy: IfNotPresent
+        image: ghcr.io/unizar-30226-2023-01/chess-backend:main
         ports:
         - containerPort: 4000
+        - containerPort: 4001
+        env:
+        - name: PORT
+          value:
+        - name: MONGO_URI
+          value:
+        - name: REDIS_URI
+          value:
+        - name: JWT_SECRET
+          value:
+        - name: GOOGLE_CALLBACK_URL
+          value:
+        - name: GOOGLE_CLIENT_ID
+          value:
+        - name: GOOGLE_CLIENT_SECRET
+          value:
+        - name: STOCKFISH_PATH
+          value:
+        - name: SUCCESS_REDIRECT
+          value:
+        - name: FAILURE_REDIRECT
+          value:
+        - name: SENDGRID_API_KEY
+          value:
