--- a/k3s/deployment.yaml
+++ b/k3s/deployment.yaml
@@ -4,6 +4,9 @@ metadata:
   name: chess-backend-deployment
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: chess
   template:
     metadata:
       labels:
