--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -96,26 +96,26 @@ jobs:
     # needs: [test]
     needs: [install]
     runs-on: ubuntu-22.04
-    steps:
+    steps:   
       - name: Checkout
         uses: actions/checkout@v3
-      
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Download Build Artifact
         uses: actions/download-artifact@v3
         with:
           name: build-artifact
-
       - name: Extract Archive
         run: |
           unzip build.zip -d build
-
       - name: Generate Docker Metadata and Push Tags to GitHub
         id: meta
         uses: docker/metadata-action@v4
@@ -126,7 +126,6 @@ jobs:
             type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
-
       - name: Create .env file
         run: |
           echo "PORT=4000" >> .env
@@ -141,7 +140,6 @@ jobs:
           echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> .env
           echo "SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }}" >> .env
           ls -la
-      
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
