me cago en todo 2.0

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -129,5 +129,5 @@ jobs:
       - name: Build and push
         run: |
           echo "IMAGE_NAME=$(echo $IMAGE_NAME | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
-          docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest -f ./Dockerfile .
-          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          docker build -t ${{ env.REGISTRY }}/${{ IMAGE_NAME }}:latest -f ./Dockerfile .
+          docker push ${{ env.REGISTRY }}/${{ IMAGE_NAME }}:latest
