--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -99,6 +99,10 @@ jobs:
     steps:   
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -112,6 +116,16 @@ jobs:
       - name: Extract Archive
         run: |
           unzip build.zip -d build
+      - name: Generate Docker Metadata and Push Tags to GitHub
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
       - name: Create .env file
         run: |
           echo "PORT=4000" >> .env
@@ -127,7 +141,9 @@ jobs:
           echo "SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }}" >> .env
           ls -la
       - name: Build and push
-        run: |
-          echo "IMAGE_NAME=$(echo $IMAGE_NAME | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
-          docker build -t ${{ env.REGISTRY }}/${IMAGE_NAME}:latest -f ./Dockerfile .
-          docker push ${{ env.REGISTRY }}/${IMAGE_NAME}:latest
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
