--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,10 @@
 # Configuración general de NGINX
 upstream expresshttp {
-  # server express:4000;
-  server reign-chess.duckdns.org:4000;
+  server express:4000;
 }
 
 upstream expressws {
-  # server express:4001;
-  server reign-chess.duckdns.org:4001;
+  server express:4001;
 }
 
 # Bloque de servidor para redirigir todas las solicitudes HTTP a HTTPS
@@ -19,15 +17,13 @@ server {
     }
 }
 
+# Bloque de servidor para redirigir todas las solicitudes HTTP a HTTPS
 server {
   listen 443 ssl;
   server_name api.gracehopper.xyz;
 
-  ssl_certificate /etc/letsencrypt/live/api.gracehopper.xyz/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/api.gracehopper.xyz/privkey.pem;
-  
-  include     /etc/letsencrypt/options-ssl-nginx.conf;
-  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+  ssl_certificate /etc/nginx/fullchain.pem;
+  ssl_certificate_key /etc/nginx/privkey.pem;
 
   location / {
     return 301 https://docs.gracehopper.xyz;
