--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "http-errors": "1.6.3",
     "ioredis": "5.3.1",
     "jsonwebtoken": "9.0.0",
-    "mongoose": "6.9.0",
+    "mongoose": "6.11.3",
     "mongoose-query-parser": "1.3.1",
     "morgan": "1.9.1",
-    "passport": "0.5.0",
+    "passport": "^0.6.0",
     "passport-google-oauth20": "2.0.0",
     "passport-jwt": "4.0.1",
     "redlock": "5.0.0-beta.2",
